# ampy

./: .gitignore  README
firmware_brain/: Makefile  config.h  pinout  port_mapping  proj.c  proj.h  string_helpers.c  ui.c  ui.h
firmware_brain/drivers/: adc.c  adc.h  i2c.c  i2c.h  i2c_config.h  ir_remote.c  ir_remote.h  lm4780_helper.c  lm4780_helper.h  pga2311.c  pga2311.h  pga2311_helper.c  pga2311_helper.h  port.c  port.h  rtc.c  rtc_dst.c  serial_bitbang.c  serial_bitbang.h  sys_messagebus.h  timer_a0.c  timer_a0.h  timer_a1.c  uart.c  uart.h  uart0.c  uart0.h
firmware_brain/interface/: i2c_fcts.c  i2c_fcts.h  uart_fcts.c  uart_fcts.h
firmware_display/: Makefile  firmware_display.ino
firmware_mixer/: Makefile  config.h  proj.c  proj.h
firmware_mixer/drivers/: adc.c  i2c_slave.c  i2c_slave.h  pga2311.c  pga2311.h  pga2311_config.h  pga2311_helper.c  pga2311_helper.h  spi.c  sys_messagebus.h  timer_a0.c  timer_a0.h  uart1.c  uart1.h
firmware_mixer/interface/: i2c_fcts.c  i2c_fcts.h  uart_fcts.c  uart_fcts.h
hardware/: amp.brd  amp.sch  amp_lm4780.brd  amp_lm4780.sch  mixer.brd  mixer.sch  power.brd  power.sch  power_amp.brd  power_amp.sch  power_pre.brd  power_pre.sch
hardware/ltspice/: README  mixer.asc  snd_detect.asc
linux/: AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  README  aclocal.m4  amp_mixer.c  amp_mixer.h  ampy_mixer.c  ampy_mixer.h  bootstrap  cli.c  cli.h  config.h  config.h.in  config.status  configure  configure.ac  libtool  mainloop.c  mem.c  mixer_controls.c  mixer_controls.h  mixer_display.c  mixer_widget.c  pga2311_helper.h  proj.h  sysdep1.h  textbox.c  utils.c  widget.c  widget.h
linux/gentoo/: ampy_mixer-9999.ebuild
linux/src/: Makefile  Makefile.am  Makefile.in  ampy_mixer.c  ampy_mixer.h  cli.c  colors.c  die.c  lm4780_helper.h  log.c  log.h  mainloop.c  mainloop.h  mixer_controls.c  mixer_controls.h  mixer_display.c  mixer_widget.c  mixer_widget.h  pga2311_helper.c  string_helpers.c  string_helpers.h  sysdep1.c  sysdep1.h
